WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61301
SVGTextPositioning attributes are marked as NumberList instead of LengthList
https://bugs.webkit.org/show_bug.cgi?id=61301
Summary
SVGTextPositioning attributes are marked as NumberList instead of LengthList
Dirk Schulze
Reported
2011-05-23 13:38:11 PDT
SVGTextPositioning attributes x, y, dx, dy are marked as AnimatedNumberList instead of AnimatedLengthList.
Attachments
Patch
(2.07 KB, patch)
2011-05-23 13:44 PDT
,
Dirk Schulze
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2011-05-23 13:44:35 PDT
Created
attachment 94479
[details]
Patch
Darin Adler
Comment 2
2011-05-23 13:48:44 PDT
Comment on
attachment 94479
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=94479&action=review
> Source/WebCore/ChangeLog:9 > + instead of AimatedLengthList.
Typo
Dirk Schulze
Comment 3
2011-05-23 22:29:10 PDT
Committed
r87127
: <
http://trac.webkit.org/changeset/87127
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug