2011-05-23  Dirk Schulze  <krit@webkit.org>

Reviewed by Darin Adler.

        SVGTextPositioning attributes are marked as NumberList instead of LengthList
        https://bugs.webkit.org/show_bug.cgi?id=61301

        SVGTextPositioningElement attributes x, y, dx and dy were marked as AnimatedNumberList
        instead of AnimatedLengthList.
        See specification http://www.w3.org/TR/SVG/text.html#InterfaceSVGTextPositioningElement

        This does not affect the behavior, since we do not respect SVG units in SMIL animation yet.
        No new tests added.

        * svg/SVGTextPositioningElement.cpp:
        (WebCore::SVGTextPositioningElement::fillPassedAttributeToPropertyTypeMap):


Canonical link: https://commits.webkit.org/76708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87127 268f45cc-cd09-0410-ab3c-d52691b4dbfc